--- a/package.json
+++ b/package.json
@@ -9,7 +9,25 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/core": "7.18.6",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@handsontable/react": "10.0.0",
+    "@mui/icons-material": "5.8.4",
+    "@mui/material": "5.8.6",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "arraystat": "^1.1.4",
+    "calculate-correlation": "^1.2.3",
+    "handsontable": "10.0.0",
+    "highcharts": "10.1.0",
+    "highcharts-react-official": "3.1.0",
+    "react-native": "0.69.1",
+    "react-redux": "8.0.2",
+    "react-router-dom": "6.3.0",
+    "redux": "4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
