--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "micro-tab-02",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://superzun.github.io/microtab/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
     "@babel/core": "7.18.6",
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
@@ -17,23 +11,34 @@
     "@mui/icons-material": "5.8.4",
     "@mui/material": "5.8.6",
     "@reduxjs/toolkit": "^1.8.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "arraystat": "^1.1.4",
     "calculate-correlation": "^1.2.3",
+    "chart.js": "^3.8.0",
+    "d3": "^7.6.1",
     "handsontable": "10.0.0",
-    "highcharts": "10.1.0",
-    "highcharts-react-official": "3.1.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "^18.2.0",
     "react-native": "0.69.1",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
-    "redux": "4.2.0"
+    "react-scripts": "5.0.1",
+    "redux": "4.2.0",
+    "victory": "^36.5.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
